--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,31 @@
 body {
-  background-color:grey;
+  background-color:black;
+  font-family:Verdana, sans-serif;
+  text-align: center;
+}
+
+h1 {
+  font-size:50px;
+}
+
+h2 {
+  font-weight: 300;
+  font-size: 42px;
+}
+
+h1, h2 {
+  color:white;
+}
+
+p {
+  color:grey;
+  font-size: 21px;
+}
+
+p a {
+  color:Aquamarine;
+  font-size:16px;
+}
+#legal {
+  text-align: right;
 }
